--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
 /* RESET */
 *,
 *::before,
@@ -12,7 +12,7 @@
 * {
   margin: 0;
   padding: 0;
-  outline: solid hsl(0,0%,5%,10%);
+  outline: solid hsl(0,0%,90%,10%);
 }
 img, picture, video, canvas, svg {
   display: block;
@@ -21,4 +21,8 @@ img, picture, video, canvas, svg {
 html,
 body {
   height: 100%;
+}
+/* FONT */
+body {
+  font-family: "Space Grotesk", sans-serif;
 }
